docs(swagger): fix response & add $ref json support
