# src/controller/UserController.go
@@ -45,17 +45,8 @@ func NewUserController(dic *xdi.DiContainer) *UserController {
 // @Tag                 User
 // @Tag                 Administration
 // @Param               page query integer false "分页" 1
-// @Accept              multipart/form-data
 // @ErrorCode           400 request param error
-/* @Response 200		{
-							"code": 200,
-							"message": "success",
-							"data": {
-								"count": 1,
-								"page": 1,
-								"data": [ ${user} ]
-							}
- 						} */
+/* @Response 200        ${resp_page_users} */
 func (u *UserController) QueryAllUsers(c *gin.Context) {
 	page, ok := param.BindQueryPage(c)
 	if !ok {
@@ -75,21 +66,9 @@ func (u *UserController) QueryAllUsers(c *gin.Context) {
 // @Description         查询用户个人信息和数量信息，此处可见用户手机号码
 // @Tag                 User
 // @Param               uid path integer true "用户id"
-// @Accept              multipart/form-data
 // @ErrorCode           400 request param error
 // @ErrorCode           404 user not found
-/* @Response 200		{
-							"code": 200,
-							"message": "success",
-							"data": {
-								"user": ${user},
-								"extra": {
-									"subscribing_cnt": 3,
-									"subscriber_cnt": 2,
-									"video_cnt": 3
-								}
-							}
- 						} */
+/* @Response 200        ${resp_user_info} */
 func (u *UserController) QueryUser(c *gin.Context) {
 	uid, ok := param.BindRouteId(c, "uid")
 	if !ok {
@@ -122,23 +101,18 @@ func (u *UserController) QueryUser(c *gin.Context) {
 // @Summary             更新用户
 // @Description         更新用户个人信息
 // @Tag                 User
-// @Param               username formData string true "用户名，长度在 [8, 30] 之间"
-// @Param               sex formData string true "用户性别，允许值为 {male, female, unknown}"
-// @Param               profile formData string true "用户简介，长度在 [0, 255] 之间"
-// @Param               birth_time formData string true "用户生日，固定格式为 2000-01-01"
+// @Param               username     formData string true "用户名，长度在 [8, 30] 之间"
+// @Param               sex          formData string true "用户性别，允许值为 {male, female, unknown}"
+// @Param               profile      formData string true "用户简介，长度在 [0, 255] 之间"
+// @Param               birth_time   formData string true "用户生日，固定格式为 2000-01-01"
 // @Param               phone_number formData string true "用户手机号码，长度为 11，仅限中国大陆手机号码"
-// @Param               avatar_url formData string true "用户头像链接"
-// @Accept              multipart/form-data
+// @Param               avatar_url   formData string true "用户头像链接"
 // @ErrorCode           400 request param error
 // @ErrorCode           400 request format error
 // @ErrorCode           400 username has been used
 // @ErrorCode           404 user not found
 // @ErrorCode           500 user update failed
-/* @Response 200		{
-							"code": 200,
-							"message": "success",
-							"data": ${user}
- 						} */
+/* @Response 200        ${resp_user} */
 // @Router              /v1/user/admin/{uid} [PUT]
 // @Security            Jwt
 // @Template            Auth Admin
@@ -146,23 +120,20 @@ func (u *UserController) QueryUser(c *gin.Context) {
 // @Description         更新用户信息，管理员权限
 // @Tag                 User
 // @Tag                 Administration
-// @Param               username formData string true "用户名，长度在 [8, 30] 之间"
-// @Param               sex formData string true "用户性别，允许值为 {male, female, unknown}"
-// @Param               profile formData string true "用户简介，长度在 [0, 255] 之间"
-// @Param               birth_time formData string true "用户生日，固定格式为 2000-01-01"
-// @Param               phone_number formData string true "用户手机号码，长度为 11，仅限中国大陆手机号码"
-// @Param               avatar_url formData string true "用户头像链接"
+// @Param               uid          path     integer true "用户id"
+// @Param               username     formData string  true "用户名，长度在 [8, 30] 之间"
+// @Param               sex          formData string  true "用户性别，允许值为 {male, female, unknown}"
+// @Param               profile      formData string  true "用户简介，长度在 [0, 255] 之间"
+// @Param               birth_time   formData string  true "用户生日，固定格式为 2000-01-01"
+// @Param               phone_number formData string  true "用户手机号码，长度为 11，仅限中国大陆手机号码"
+// @Param               avatar_url   formData string  true "用户头像链接"
 // @Accept              multipart/form-data
 // @ErrorCode           400 request param error
 // @ErrorCode           400 request format error
 // @ErrorCode           400 username has been used
 // @ErrorCode           404 user not found
 // @ErrorCode           500 user update failed
-/* @Response 200		{
-							"code": 200,
-							"message": "success",
-							"data": ${user}
- 						} */
+/* @Response 200        ${resp_user} */
 func (u *UserController) UpdateUser(isExact bool) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		user := &po.User{}
@@ -221,13 +192,9 @@ func (u *UserController) UpdateUser(isExact bool) func(c *gin.Context) {
 // @Summary             删除用户
 // @Description         删除用户账户以及所有信息
 // @Tag                 User
-// @Accept              multipart/form-data
 // @ErrorCode           404 user not found
 // @ErrorCode           500 user delete failed
-/* @Response 200		{
-							"code": 200,
-							"message": "success"
- 						} */
+/* @Response 200        ${resp_success} */
 // @Router              /v1/user/admin/{uid} [DELETE]
 // @Security            Jwt
 // @Template            Auth Admin
@@ -235,13 +202,10 @@ func (u *UserController) UpdateUser(isExact bool) func(c *gin.Context) {
 // @Description         删除用户账户，管理员权限
 // @Tag                 User
 // @Tag                 Administration
-// @Accept              multipart/form-data
+// @Param               uid path integer true "用户id"
 // @ErrorCode           404 user not found
 // @ErrorCode           500 user delete failed
-/* @Response 200		{
-							"code": 200,
-							"message": "success"
- 						} */
+/* @Response 200        ${resp_success} */
 func (u *UserController) DeleteUser(isExact bool) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var uid int32
